remove docs
